# Iosh__CloudLoader

./: .gitignore  Cargo.toml  LICENSE  README.md
.vs_code/: settings.json
core/: Cargo.toml  README.md
core/src/: check_alive.rs  error.rs  lib.rs  prelude.rs
core/src/api_manager/: google_drive.rs  interface.rs  mod.rs  yandex_disk.rs
core/src/api_manager/google_drive/: api.rs  auth.rs  mod.rs
core/src/auth/: checker.rs  functions.rs  mod.rs
core/src/check_alive/: checker.rs  functions.rs  mod.rs
core/src/config/: mod.rs  user.rs
core/src/domain/: cloud.rs  mod.rs  oauth_tocken.rs
core/src/loaders/: loader_from_cloud.rs  loader_in_cloud.rs  mod.rs
core/src/types/: address_file.rs  cloud.rs  oauth_tocken.rs
core/tests/: mod.rs  test_check_alive.rs
core/tests/unit/: check_alive.rs  mod.rs
desctop/: Cargo.toml  README.md
desctop/src/: main.rs
web/: README.md
web/backend/: Cargo.toml
xtask/src/: main.rs
