[package]
name = "core_cloud_loader"
version = "0.1.0"
edition = "2021"
authors = [
    "Ivenin Valentin <iveninvala7@gmail.com>",
]
description = "This library is designed for connecting to various cloud services and for uploading/downloading data from them."
repository = "https://github.com/IOSHED/Iosh__CloudLoader"


[lib]
# generate lib for tests and reusing the code
path = "src/lib.rs"

[dependencies]
thiserror = "1"
futures = "0.3.30"
async-trait = "0.1.80"
oauth2 = "4.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
