[package]
name = "desctop"
version = "0.1.0"
edition = "2021"

[dependencies]
core_cloud_loader = { path = "../core" }
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
hmac = "0.11"
sha2 = "0.10"
base64 = "0.13"